[gd_scene load_steps=25 format=3 uid="uid://coj30smreyyiy"]

[ext_resource type="Script" path="res://main.gd" id="1_albrn"]
[ext_resource type="Texture2D" uid="uid://bfy66fmuh4jdb" path="res://unnamed (1).jpg" id="2_6sb13"]
[ext_resource type="Shader" path="res://main.gdshader" id="2_t7txy"]
[ext_resource type="Texture2D" uid="uid://cu37d54v3yusj" path="res://Gemini_Generated_Image_bvn9axbvn9axbvn9-removebg-preview.png" id="3_0kdog"]
[ext_resource type="FontFile" uid="uid://fi5do0upwbap" path="res://Nosutaru-dotMPlusH-10-Regular.ttf" id="3_86ke0"]
[ext_resource type="Texture2D" uid="uid://rhn62h741hyl" path="res://chou-xiang-dena-biao-mianto-baiikonkuritono-shino-binotekusucha.jpg" id="3_n4as5"]
[ext_resource type="AudioStream" uid="uid://4dsx4fa2po6r" path="res://factory-fluorescent-light-buzz-6871.mp3" id="6_6rnvw"]
[ext_resource type="Shader" path="res://main2.gdshader" id="8_f3mjp"]
[ext_resource type="PackedScene" uid="uid://eqenmcgaojgu" path="res://red_light.tscn" id="9_ffmbt"]
[ext_resource type="AudioStream" uid="uid://bfdwjboql4ikg" path="res://switch.mp3" id="10_o2114"]
[ext_resource type="AudioStream" uid="uid://cqsmvwddntmsf" path="res://beep.mp3" id="11_85xop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v7576"]
shader = ExtResource("2_t7txy")
shader_parameter/static_amount = 0.6
shader_parameter/static_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lupjn"]
shader = ExtResource("2_t7txy")
shader_parameter/static_amount = 0.655
shader_parameter/static_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_db3en"]
shader = ExtResource("2_t7txy")
shader_parameter/static_amount = 0.5
shader_parameter/static_color = Color(0, 0, 0, 1)

[sub_resource type="Environment" id="Environment_1v7fg"]
glow_enabled = true
glow_intensity = 7.15

[sub_resource type="AtlasTexture" id="AtlasTexture_tnu5o"]
atlas = ExtResource("3_0kdog")
region = Rect2(0, 0, 224, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrb8u"]
atlas = ExtResource("3_0kdog")
region = Rect2(224, 0, 224, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxvpl"]
atlas = ExtResource("3_0kdog")
region = Rect2(448, 0, 224, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfc1c"]
atlas = ExtResource("3_0kdog")
region = Rect2(0, 185, 224, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo4j4"]
atlas = ExtResource("3_0kdog")
region = Rect2(224, 185, 224, 185)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vv5l"]
atlas = ExtResource("3_0kdog")
region = Rect2(448, 185, 224, 185)

[sub_resource type="SpriteFrames" id="SpriteFrames_drva3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnu5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrb8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxvpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfc1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo4j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vv5l")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_8v6vv"]
font = ExtResource("3_86ke0")
font_size = 80

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w88ey"]
shader = ExtResource("8_f3mjp")
shader_parameter/scanline_count = 100.0
shader_parameter/scanline_opacity = 0.891
shader_parameter/curvature = 0.15
shader_parameter/vignette_opacity = 0.314

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_albrn")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0392157, 0.0392157, 0.0392157, 1)

[node name="GeminiGeneratedImageTmrfiztmrfiztmrf" type="Sprite2D" parent="ColorRect"]
position = Vector2(575, 326)
scale = Vector2(1.3, 1.167)
texture = ExtResource("2_6sb13")

[node name="Polygon2D6" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(-413.529, -26.3177)
scale = Vector2(0.617647, 1.05695)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D8" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(342.368, 212.725)
scale = Vector2(0.404412, 0.253571)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D7" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(195.147, 104.312)
scale = Vector2(0.661765, 0.633929)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D5" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(279.559, 155.783)
scale = Vector2(0.514706, 0.431421)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D3" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(176.051, 363.935)
scale = Vector2(0.336869, 0.0285211)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(267.016, 493.131, 80, 458.069, 80, 331.512, 81, -197.765, 80, -769.091, 266.011, -804.152)

[node name="Polygon2D2" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(0, 313.637)
scale = Vector2(1, 0.251462)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(164, 240.047, 163, 375.256, 163, 419, 80, 419, 80, 331.512, 80, 244.023)

[node name="Polygon2D4" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_lupjn")
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(281, 323, 331, 323, 331, 351, 280, 351)

[node name="Polygon2D10" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(612.368, 140.542)
scale = Vector2(0.404412, 0.422619)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D12" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(866.353, -31.1611)
scale = Vector2(0.588235, 1.07063)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D11" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(665.03, 97.2975)
scale = Vector2(0.632352, 0.648015)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="Polygon2D" type="Polygon2D" parent="ColorRect"]
modulate = Color(20, 20, 20, 1)
self_modulate = Color(20, 20, 20, 1)
material = SubResource("ShaderMaterial_db3en")
position = Vector2(-3.72058, 0.81907)
scale = Vector2(1.00735, 1.00039)
color = Color(0.137802, 0.107661, 0.0292588, 1)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506.993, 497.986, 642, 497, 642, 427, 506.993, 426.014)

[node name="Polygon2D9" type="Polygon2D" parent="ColorRect"]
material = SubResource("ShaderMaterial_v7576")
position = Vector2(642.162, 124.45)
scale = Vector2(0.477941, 0.507143)
texture = ExtResource("3_n4as5")
polygon = PackedVector2Array(506, 497.986, 642, 497, 642, 427, 506, 427)

[node name="WorldEnvironment" type="WorldEnvironment" parent="ColorRect"]
environment = SubResource("Environment_1v7fg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.572549, 0.835294, 0.960784, 0.423529)
self_modulate = Color(1, 1, 1, 0.647059)
position = Vector2(573, 468)
scale = Vector2(0.334562, 0.367491)
sprite_frames = SubResource("SpriteFrames_drva3")
autoplay = "default"
frame_progress = 0.86949

[node name="MoneyLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.529412)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 67.0
offset_right = 1152.0
offset_bottom = 267.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_86ke0")
text = "$1000"
label_settings = SubResource("LabelSettings_8v6vv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EventPanel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.427451)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 371.0
offset_top = 240.0
offset_right = 761.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventLabel" type="Label" parent="EventPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_86ke0")
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="WorkButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 224.0
offset_top = 510.0
offset_right = 930.0
offset_bottom = 617.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_86ke0")
theme_override_font_sizes/font_size = 32
action_mode = 0
text = "work"
autowrap_mode = 2

[node name="CostLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.411765)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_86ke0")
theme_override_font_sizes/font_size = 24
text = "living cost"
horizontal_alignment = 1

[node name="GameOverPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 317.0
offset_top = 199.0
offset_right = 868.0
offset_bottom = 416.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_86ke0")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.443137)
layout_mode = 0
offset_left = 887.0
offset_right = 1152.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("3_86ke0")

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_6rnvw")
volume_db = 7.748
autoplay = true
bus = &"Environment"

[node name="RedLight" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(400, 167)

[node name="RedLight2" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(511, 233)

[node name="RedLight3" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(878, 208)

[node name="RedLight4" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(789, 266)

[node name="RedLight5" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(295, 237)

[node name="RedLight6" parent="." instance=ExtResource("9_ffmbt")]
position = Vector2(312, 238)

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_w88ey")
layout_mode = 0
offset_right = 1156.0
offset_bottom = 650.0
mouse_filter = 2

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_o2114")
max_polyphony = 10

[node name="EventSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_85xop")
